# GaussianQuadrature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: GaussHermiteQuadrature.hpp  GaussLegendreQuadrature.hpp  GaussQuadrature.hpp
src/: CMakeLists.txt  GaussQuadrature.cpp
test/: CMakeLists.txt  test.cpp
